<resources>
    <string name="app_name">Procadec S.L.</string>
    <string name="comenzar_boton">Comenzar</string>
    <string name="iniciar_sesion_boton">Iniciar sesión</string>
    <string name="registrarse_boton">Registrarse</string>
    <string name="correo_electronico">Correo electŕonico</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>

    <string name="cancelar_boton">Cancelar</string>
    <string name="contrasenia">Contraseña</string>
    <string name="repetir_contrasenia">Repite la contraseña</string>
    <string name="introducir_contrasenia">Introduce la contraseña</string>
    <string name="introducir_email">Introduce el correo electrónico</string>
    <string name="introducir_nombre_usuario">Introduce el nombre de usuario</string>

    <string name="inicio">Inicio</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorías</string>
    <string name="usuarios">Usuarios</string>
    <string name="movimientos">Movimientos</string>


    <string name="error_usuario_requerido">Debes introducir un nombre de usuario</string>
    <string name="error_contrasenia_requerida">Debes introducir una contraseña</string>
    <string name="error_usuario_longitud">El usuario debe tener como mínimo 5 caracteres</string>
    <string name="error_contrasenia_longitud">La contraseña debe tener como mínimo 5 caracteres</string>
    <string name="error_email_requerido">Debes introducir un correo electrónico</string>
    <string name="error_contrasenia_rep_requerida">Debes volver a introducir la contraseña</string>
    <string name="error_email_formato_invalido">Debes introducir un correo electrónico válido</string>
    <string name="error_contrasenias_no_coinciden">Las contraseñas no coinciden</string>
    <string name="usuario_registrado">Usuario registrado</string>
    <string name="usuario_ya_registrado">Usuario YA registrado</string>
    <string name="categoria_no_creada">Categoría NO creada</string>
    <string name="error_al_crear_usuario">Error al crear usuario</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_de_la_categoria">Nombre de la categoría</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_categoria">Nueva categoría</string>
    <string name="error_nombre_cat_requerido">Debes introducir un nombre para la categoría</string>
    <string name="error_nombre_cat_longitud">El nombre debe tener como mínimo 5 caracteres</string>
    <string name="categoria_creada">Categoría creada</string>
    <string name="categoria_ya_creada">Categoría YA creada</string>
    <string name="error_al_crear_categoria">Error al crear categoría</string>
    <string name="crear_categoria">Crear Categoría</string>
    <string name="numero_productos_placeholder">5 productos</string>
    <string name="error_usuario_contrasenia_incorrectos">Usuario O contraseña incorrectos</string>
    <string name="editar_categoria">Editar categoría</string>
    <string name="categoria_actualizada">Categoría actualizada</string>
    <string name="categoria_no_actualizada">Categoría NO actualizada</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_usuario_placeholder">Nombre de usuario: Juanito</string>
    <string name="email_placeholder">E-mail: juan@juan.com</string>
    <string name="contrasenia_placeholder">Contraseña: 12345678</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="iniciar_sesion_titulo">Inicio de sesión</string>
    <string name="registro_titulo">Registro</string>
    <string name="perfil_titulo">Perfil</string>
    <string name="productos_titulo">Productos</string>
    <string name="categorias_titulo">Categorías</string>
    <string name="usuario_placeholder">Juanito</string>
    <string name="usuario_eliminado">Usuario eliminado, \ncerrando sesión</string>
    <string name="usuario_no_eliminado">Usuario NO eliminado</string>
    <string name="usuario_actualizado">Usuario actualizado</string>
    <string name="usuario_no_actualizado">Usuario NO actualizado</string>
    <string name="categoria_eliminada">Categoría eliminada</string>
    <string name="categoria_no_eliminada">Categoria NO eliminada</string>
    <string name="crear_producto">Nuevo producto</string>
    <string name="referencia_producto">Referencia</string>
    <string name="editar_producto">Editar producto</string>
    <string name="referencia_placeholder">1254789635412</string>
    <string name="descripcion_placeholder">Tornillos planos rosca madera 34x12mm galvanizados</string>
    <string name="cantidad_de_producto_placeholder">10 unidades</string>
    <string name="descripcion_producto">Descripción</string>
    <string name="cantidad_producto">Cantidad</string>
    <string name="recibir">Recibir</string>
    <string name="enviar">Enviar</string>
    <string name="cantidad_placeholder">0</string>
    <string name="todas">Todas</string>
    <string name="producto_actualizado">Producto actualizado</string>
    <string name="producto_creado">Producto creado</string>
    <string name="producto_no_creado">Producto NO creado</string>
    <string name="producto_no_actualizado">Producto NO actualizado</string>
    <string name="error_referencia_requerida">Referencia requerida</string>
    <string name="error_referencia_longitud">La referencia debe tener entre 5 y 20 caracteres</string>
    <string name="error_descripcion_requerida">Descripción requerida</string>
    <string name="error_descripcion_longitud">La descripción debe tener entre 5 y 200 caracteres</string>
    <string name="error_cantidad_requerida">Cantidad requerida</string>
    <string name="error_cantidad_entero">La cantidad debe ser un número entero</string>
    <string name="producto_eliminado">Producto eliminado</string>
    <string name="producto_no_eliminado">Producto NO eliminado</string>
    <string name="error_no_stock">No hay suficiente stock</string>

</resources>