<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/perfil_titulo"
            app:menu="@menu/top_app_bar"
            app:titleTextColor="@color/white"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:layout_constraintTop_toTopOf="parent"

            />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/perfil_guideline_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/perfil_guideline_v9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/perfil_guideline_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/perfil_guideline_h9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toStartOf="@id/perfil_guideline_v9"
            app:layout_constraintStart_toEndOf="@id/perfil_guideline_v1"
            >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="false"
                android:elevation="4dp"
                android:focusable="false"
                android:orientation="vertical"
                app:cardCornerRadius="15dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/perfil_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/perfil_nombre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        tools:text="@string/nombre_usuario_placeholder"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/perfil_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingBottom="16dp"
                        tools:text="@string/email_placeholder"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/perfil_nombre" />

                    <TextView
                        android:id="@+id/perfil_contrasenia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:paddingBottom="16dp"
                        tools:text="@string/contrasenia_placeholder"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/perfil_email" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/perfil_botones"
                        android:layout_width="0dp"
                        android:paddingBottom="4dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/perfil_contrasenia">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/perfil_boton_editar"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="4dp"
                            android:layout_weight="1"
                            android:text="@string/editar"
                            android:textColor="@color/white"
                            app:cornerRadius="50dp"
                            app:icon="@drawable/ic_baseline_edit_24"
                            app:iconGravity="textStart"
                            app:iconTint="@color/white"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/perfil_boton_eliminar"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:text="@string/eliminar"
                            android:textColor="@color/white"
                            app:cornerRadius="50dp"
                            app:icon="@drawable/ic_baseline_delete_24"
                            app:iconGravity="textStart"
                            app:iconTint="@color/white"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/perfil_editar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:visibility="gone"
                >
                <TextView
                    android:id="@+id/perfil_editar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/editar_perfil"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/perfil_editar_nombre_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/introducir_nombre_usuario"
                    android:inputType="text"
                    app:boxStrokeWidth="2dp"
                    app:cornerRadius="15dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/perfil_editar_nombre_tie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:nextFocusDown="@+id/perfil_editar_email_tie"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/perfil_editar_email_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/introducir_email"
                    android:inputType="text"
                    app:boxStrokeWidth="2dp"
                    app:cornerRadius="15dp"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/perfil_editar_email_tie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/perfil_editar_contrasenia_tie"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/perfil_editar_contrasenia_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/introducir_contrasenia"
                    android:inputType="text"
                    app:boxStrokeWidth="2dp"
                    app:cornerRadius="15dp"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/perfil_editar_contrasenia_tie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/perfil_editar_contrasenia_rep_tie"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/perfil_editar_contrasenia_rep_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/repetir_contrasenia"
                    android:inputType="text"
                    app:boxStrokeWidth="2dp"
                    app:cornerRadius="15dp"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/perfil_editar_contrasenia_rep_tie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/perfil_editar_botones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    >
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/perfil_editar_guardar_boton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/guardar"
                        android:textColor="@color/white"
                        app:cornerRadius="50dp"
                        app:icon="@drawable/ic_baseline_save_24"
                        app:iconGravity="textStart"
                        app:iconTint="@color/white"
                        app:iconPadding="24dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/perfil_editar_cancelar_boton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:text="@string/cancelar_boton"
                        android:textColor="@color/white"
                        app:cornerRadius="50dp"
                        app:icon="@drawable/ic_baseline_cancel_24"
                        app:iconGravity="textStart"
                        app:iconTint="@color/white"
                        app:iconPadding="16dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>