<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/inicioFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.procadec.aplicacion_movil.ui.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio">
        <action
            android:id="@+id/action_inicioFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.procadec.aplicacion_movil.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registroFragment"
            app:destination="@id/registroFragment" />
        <action
            android:id="@+id/action_loginFragment_to_productosFragment"
            app:destination="@id/productosFragment" />
    </fragment>
    <fragment
        android:id="@+id/registroFragment"
        android:name="com.procadec.aplicacion_movil.ui.RegistroFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_registro">
        <action
            android:id="@+id/action_registroFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/registroFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/productosFragment"
        android:name="com.procadec.aplicacion_movil.ui.ProductosFragment"
        android:label="ProductosFragment"
        tools:layout="@layout/fragment_productos">
        <action
            android:id="@+id/action_productosFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/productosFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_productosFragment_to_perfilFragment"
            app:destination="@id/perfilFragment"
            app:popUpTo="@id/productosFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/categoriasFragment"
        android:name="com.procadec.aplicacion_movil.ui.CategoriasFragment"
        android:label="CategoriasFragment"
        tools:layout="@layout/fragment_categorias">
        <action
            android:id="@+id/action_categoriasFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/categoriasFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_categoriasFragment_to_perfilFragment"
            app:destination="@id/perfilFragment"
            app:popUpTo="@id/categoriasFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.procadec.aplicacion_movil.ui.PerfilFragment"
        android:label="PerfilFragment"
        tools:layout="@layout/fragment_perfil">
        <action
            android:id="@+id/action_perfilFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/perfilFragment"
            app:popUpToInclusive="true"/>
    </fragment>
</navigation>